k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: csgo-statistcs
spec:
  type: ClusterIP
  selector:
    name: csgo-statistcs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
